fix header alignment

--- a/style.css
+++ b/style.css
@@ -173,21 +173,49 @@ body {
 .header-top-left {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: min-content;
+
+  align-items: center;
+  justify-content: start;
 }
 
 .header-top-right {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+
+  display: grid;
+  grid-template-columns: repeat(2, min-content);
+  grid-template-rows: min-content;
+
+  align-items: center;
+  justify-content: end;
 }
 
 .header-bottom-left {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+
+  display: grid;
+  grid-template-columns: repeat(2, min-content);
+  grid-template-rows: min-content;
+
+  align-items: center;
+  justify-content: start;
 }
 
 .header-bottom-right {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+
+  display: grid;
+  grid-template-columns: repeat(3, min-content);
+  grid-template-rows: min-content;
+
+  align-items: center;
+  justify-content: end;
 }
 
 .header-button:hover {
@@ -237,6 +265,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: min-content;
 
   background-color: grey;
 }
